--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -21,7 +21,11 @@
         <td><%= product.price %></td>
         <td><%= product.allergens %></td>
         <td><%= product.quantity %></td>
-        <td><%= product.image %></td>
+        <!--<td><%= product.image %></td>-->
+
+        <td><%= image_tag product.image %></td>
+
+
         <td><%= link_to 'Show', product %></td>
         <td><%= link_to 'Edit', edit_product_path(product) %></td>
         <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
