removed shopping cart and replaced with ShoppingCartItems

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,3 +17,12 @@
 img {
     width: 300px;
 }
+
+.col-med-3 p {
+    font-size: 14px;
+}
+
+.col-med-3 h3 {
+    font-size: 16px;
+    align-content: center;
+}
