--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,38 +1,31 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Products</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Item</th>
-      <th>Price</th>
-      <th>Allergens</th>
-      <th>Quantity</th>
-      <th>Image</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+<div class="container">
+  <div class="row">
     <% @products.each do |product| %>
-      <tr>
-        <td><%= product.item %></td>
-        <td><%= product.price %></td>
-        <td><%= product.allergens %></td>
-        <td><%= product.quantity %></td>
-        <!--<td><%= product.image %></td>-->
-
-        <td><%= image_tag product.image %></td>
-
-
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+        <div class="card" style="width: 20rem;">
+          <img class="card-img-top">
+          <%= image_tag product.image %>
+          <div class="card-body">
+            <h4 class="card-title"><%= product.item %></h4>
+            <p class="card-text"><%= product.price %></p>
+            <p class="card-text"><%= product.quantity %></p>
+          </div>
+        </div>
     <% end %>
-  </tbody>
-</table>
+  </div>
+</div>
+
+<hr>
+
+<!--<div class="card" style="width: 20rem;">-->
+  <!--<img class="card-img-top" src="..." alt="Card image cap">-->
+  <!--<div class="card-body">-->
+    <!--<h4 class="card-title">Card title</h4>-->
+    <!--<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>-->
+    <!--<a href="#" class="btn btn-primary">Go somewhere</a>-->
+  <!--</div>-->
+<!--</div>-->
 
 <br>
 
