--- a/app/views/shopping_cart_items/index.html.erb
+++ b/app/views/shopping_cart_items/index.html.erb
@@ -6,21 +6,22 @@
   <thead>
     <tr>
       <th>Product</th>
-      <th>User</th>
-      <th>Prod qty</th>
+      <th>Price</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
-    <% @shopping_cart_items.each do |shopping_cart_item| %>
+    <% @shopping_cart_items.each do |item| %>
       <tr>
-        <td><%= shopping_cart_item.product_id %></td>
-        <td><%= shopping_cart_item.user_id %></td>
-        <td><%= shopping_cart_item.prod_qty %></td>
-        <td><%= link_to 'Show', shopping_cart_item %></td>
-        <td><%= link_to 'Edit', edit_shopping_cart_item_path(shopping_cart_item) %></td>
-        <td><%= link_to 'Destroy', shopping_cart_item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <!-- Product : item:string price:decimal allergens:string quantity:integer image:string-->
+        <!--SHopogncart - product_id:integer user_id:integer prod_qty:integer-->
+        <td>
+          <img class="card-img-top">
+          <%= image_tag item.product.image %>
+        </td>
+        <td><%= item.product.item %></td>
+        <td>$<%= item.product.price %></td>
       </tr>
     <% end %>
   </tbody>
