--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,9 @@
 <h1>Products</h1>
 
+<!--table class="table table-striped"-->
+
+
+
 <div class="container">
   <div class="row">
     <% @products.each do |product| %>
