--- a/app/views/shopping_cart_items/index.html.erb
+++ b/app/views/shopping_cart_items/index.html.erb
@@ -19,8 +19,9 @@
         <td>
           <img class="card-img-top">
           <%= image_tag item.product.image %>
+          <%= item.product.item %>
         </td>
-        <td><%= item.product.item %></td>
+        <!--<td><%= item.product.item %></td>-->
         <td>$<%= item.product.price %></td>
       </tr>
     <% end %>
