refresh the page in a tacky way

--- a/app/views/shopping_cart_items/index.html.erb
+++ b/app/views/shopping_cart_items/index.html.erb
@@ -31,3 +31,10 @@
 <br>
 
 <%= link_to 'New Shopping Cart Item', new_shopping_cart_item_path %>
+
+<script>
+    function refresh() {
+        window.location.reload(true);
+    }
+    setTimeout(refresh, 1000);
+</script>
