Handle shopping cart queue events

--- a/app/views/shopping_cart_items/index.html.erb
+++ b/app/views/shopping_cart_items/index.html.erb
@@ -36,5 +36,5 @@
     function refresh() {
         window.location.reload(true);
     }
-    setTimeout(refresh, 1000);
+    setTimeout(refresh, 1000 * 1);
 </script>
