--- a/app/views/shopping_cart_items/index.html.erb
+++ b/app/views/shopping_cart_items/index.html.erb
@@ -6,6 +6,7 @@
   <thead>
     <tr>
       <th>Product</th>
+      <!--<th>Allergens</th>-->
       <th>Price</th>
       <th colspan="3"></th>
     </tr>
@@ -21,20 +22,20 @@
           <%= image_tag item.product.image %>
           <%= item.product.item %>
         </td>
-        <!--<td><%= item.product.item %></td>-->
-        <td>$<%= item.product.price %></td>
+        <!--<td><%= item.product.allergens %></td>-->
+        <td class="price">$ <%= '%.2f' %  item.product.price %></td>
+        <!--<td><%= item.user.allergies %></td>-->
       </tr>
     <% end %>
   </tbody>
 </table>
 
+
+
 <br>
-
-<%= link_to 'New Shopping Cart Item', new_shopping_cart_item_path %>
-
 <script>
     function refresh() {
         window.location.reload(true);
     }
-    setTimeout(refresh, 1000 * 1);
+    setTimeout(refresh, 1000 * 1000);
 </script>
