--- a/app/views/shopping_cart_items/index.html.erb
+++ b/app/views/shopping_cart_items/index.html.erb
@@ -18,10 +18,15 @@
 
 <p id="notice"><%= notice %></p>
 
-<h1>Shopping Cart Items</h1>
+<!--<h1>Shopping Cart Items</h1>-->
+<div class="visaBTN">
+  <h1>
+    Shopping Cart Items
 
-<img alt="Visa Checkout" class="v-button" role="button"
-     src="https://sandbox.secure.checkout.visa.com/wallet-services-web/xo/button.png"/>
+    <img alt="Visa Checkout" class="v-button" role="button"
+         src="https://sandbox.secure.checkout.visa.com/wallet-services-web/xo/button.png"/>
+  </h1>
+</div>
 
 
 <table table class="table table-striped">
